@@ -55,7 +55,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Build 3"
-.TH SBO::Lib::Build 3 "Setting Orange, Discord 2, 3191 YOLD" "" "sbotools 3.4.2"
+.TH SBO::Lib::Build 3 "Boomtime, Discord 4, 3191 YOLD" "" "sbotools 3.4.2"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -274,8 +274,8 @@ when a build fails.
 .PP
 \&\f(CWrationalize_queue()\fR takes a build queue and rearranges it such that
 no script appears before any of its dependencies. Currently, this is only
-useful when an automatic reverse dependency rebuild has been triggered.
-The rearranged queue is returned.
+useful when an automatic reverse dependency rebuild has been triggered or
+in case of a mass rebuild. The rearranged queue is returned.
 .SS revert_slackbuild
 .IX Subsection "revert_slackbuild"
 .Vb 1
