@@ -293,17 +293,22 @@ $std_names{$_->{name}} = $_ for @$std_pkgs;
 
 # prepare a queue in case of mass_rebuild
 if ($mass_rebuild and not $resume_mass_rebuild) {
+	my $needs_rationalize;
 	my $inst_sbos = get_installed_packages('SBO');
 	my %sbos_names;
 	$sbos_names{$_->{name}} = $_ for @$inst_sbos;
 	for my $sbo (%sbos_names) {
 		my $name = $sbos_names{$sbo}{name};
 		next if not $name;
-		# mass_rebuild does not handle -compat32 builds
-		$name =~ s/-compat32$//;
+		$needs_rationalize = 1 if $sbo =~ /-compat32$/;
 		my $queue = get_build_queue([$name], \%warnings);
+		if ($sbo =~ /-compat32$/) {
+			for my $item (@$queue) { $item = "$item-compat32" unless $item =~ /-compat32$/; }
+			$needs_rationalize = 1;
+		}
 		$build_queue = merge_queues($build_queue, $queue);
 	}
+	$build_queue = rationalize_queue($build_queue) if $needs_rationalize;
 }
 
 # populate %locations and sanity check
@@ -341,15 +346,17 @@ my $added = ' added to install queue.';
 FIRST: for my $sbo (@$build_queue) {
 	my $name;
 	if ($sbo =~ /-compat32$/) {
-		# the use of $utemp here is future-proofing against (eventually)
-		# incoming --mass-rebuild compatibility
-		next FIRST unless $utemp;
+		next FIRST unless $utemp or $mass_rebuild;
 		$name = $sbo;
 		$sbo =~ s/-compat32$//;
 	} else {
 		$name = $compat32 ? "$sbo-compat32" : $sbo;
 	}
-	$locations{$name} = get_sbo_location($sbo) if $compat32;
+	if ($std_names{$name} and $non_int) {
+		wrapsay "$sbo is not an SBo package. Skipping.";
+		next FIRST;
+	}
+	$locations{$name} = get_sbo_location($sbo) if $name =~ /-compat32$/;
 	# do not attempt compat32 builds if noarch
 	if ($name =~ /-compat32$/ and $locations{$name}) {
 		if (system("grep", "-q", "ARCH=noarch", "$locations{$name}/$sbo.SlackBuild") == 0) {
@@ -375,9 +382,8 @@ FIRST: for my $sbo (@$build_queue) {
 
 	if ($inst_names{$name}) {
 		my $inst_msg = sprintf "%s (%s) is already installed.", $name, $inst_names{$name}{pkg};
-		# Regardless of nointeractive or anything else, always
-		# warn with default "no" for reinstall if the package is
-		# installed non-SBo and it exists in the tree.
+		# always warn with default "no" for reinstall if the package is
+		# installed non-SBo and it exists in the tree
 		if ($reinstall and $std_names{$name} and not (defined $warnings{$sbo} and $warnings{$sbo} eq 'nonexistent')) {
 			next FIRST unless prompt("$inst_msg\nWarning: $name is not an SBo package. Reinstall from SBo anyway?", default => 'no');
 		} elsif ($reinstall and not $non_int) {
@@ -420,8 +426,8 @@ FIRST: for my $sbo (@$build_queue) {
 	}
 
 	unless ($non_int) {
-		# if compat32 is TRUE, we need to see if the non-compat version exists.
-		if ($compat32) {
+		# if a compat32 build, we need to see if the non-compat version exists.
+		if ($name =~ /-compat32$/) {
 			unless ($inst_names{$sbo}) {
 				say "$name requires $sbo.";
 				my ($cmds, $opts, $exit) = user_prompt($sbo, $locations{$sbo});
@@ -447,8 +453,8 @@ FIRST: for my $sbo (@$build_queue) {
 			next FIRST if $cmds eq 'N';
 		}
 		push(@temp_queue, $name);
-		$commands{$sbo} = $cmds;
-		$options{$sbo} = $opts;
+		$commands{$name} = $cmds;
+		$options{$name} = $opts;
 		say "$name$added";
 	} else {
 		# if nointeractive, use saved build options unless reading a template
@@ -461,11 +467,11 @@ FIRST: for my $sbo (@$build_queue) {
 					warn $prev_fh;
 				} else {
 					my $opts = <$prev_fh>;
-					$options{$sbo} = $opts;
+					$options{$name} = $opts;
 				}
 			}
 		}
-		push(@temp_queue, $sbo);
+		push(@temp_queue, $name);
 		say "\n$name$added";
 	}
 }
