@@ -29,6 +29,8 @@ sbotools
   * Tree.pm: Properly report compat32 scripts in LOCAL_OVERRIDES
   * sbocheck: Fix non-root --nopull when GPG_VERIFY is on
   * sbocheck: Fix build number display for scripts bumped in LOCAL_OVERRIDES
+  * sboinstall: --mass-rebuild handles compat32 builds
+  * sboinstall: packages without the _SBo tag are skipped automatically if not interactive
 
 * 3.4.2 - 2025-02-07
   * Build.pm: When distcleaning, do not delete files that are needed later in the queue
